# Lead-Sniper

./: README.md  pyproject.toml  requirements.txt
config/: settings.py
data/: companies.csv
src/: main.py
src/cat_companies_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/data_collectors/: base.py  catalog_scanner.py  rusprofile_collector.py  website_parser.py
src/processors/: cat_classifier.py  data_cleaner.py  revenue_validator.py
src/utils/: csv_handler.py  http_client.py
