[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cat-companies-analyzer"
version = "0.1.0"
description = "Analyzer for Russian companies using CAT systems"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4", 
    "pandas",
    "lxml",
    "fake-useragent",
    "python-dotenv",
    "openpyxl",
]

[project.scripts]
cat-analyzer = "src.main:main"